# plerion

./: .csharpierrc.json  .dockerignore  .env  .env.local  .env.sample  .gitignore  .gitmodules  LICENCE  LICENSE  Outernet.sln  README.md  compose.dev.yml  compose.override.yml  compose.yml  describe-tasks.txt  docker-compose.yaml  docker-compose.yml  generate-sln.ps1  images-lock.json  images.json  openapi-projects.json  out.txt  plan.json  plerion.code-workspace  postgrestools.jsonc  pyproject.toml  pyrightconfig.json  ruff.toml  workspace.json
api/: Dockerfile  piccolo_conf.py  pyproject.toml
api/api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
api/plerion_api/db/: app.py
api/plerion_api/routers/: captures.py
api/src/: app.py  main.py  settings.py  storage.py
api/src/api.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
api/src/db/: app.py  conf.py  local_conf.py  piccolo_app.py  piccolo_shims.py  tool.py
api/src/routers/: captures.py
capture-app/zed/: README.md  app.py  capture.py  install.py  install.sh  openapi.json  pyproject.toml  requirements.txt  scratch.txt  setup.py  start.sh  zed-capture.service
capture-app/zed/clients/: openapi.json
capture-app/zed/src/: dump_openapi.py  main.py
common/: pyproject.toml
common/src/common/: batch_client.py  batch_client_aws.py  batch_client_docker.py  boto_clients.py  classes.py  database_utils.py  fastapi.py  make_multipar_json_dep.py  openapi.py  run_command.py  schemas.py  session_client_docker.py  stream_tar.py
docker/api/: Dockerfile  entrypoint.sh  openapi.json  pylock.toml  pyproject.toml
docker/api/src/: auth.py  database.py  dump_openapi.py  main.py  multipart_json_binary_operation.py  settings.py  storage.py
docker/auth-initializer/: Dockerfile  entrypoint.sh  pylock.toml  pyproject.toml
docker/localizer/: Dockerfile  entrypoint.sh  openapi.json  pylock.neural-networks-cpu.toml  pylock.neural-networks-cuda.toml  pylock.neural-networks-rocm.toml  pylock.neural-networks.toml  pylock.toml  pylock.torch-cpu.toml  pylock.torch-cuda.toml  pylock.torch-rocm.toml  pylock.torch.toml  pyproject.toml
docker/localizer/src/: build_metrics.py  dump_openapi.py  localize.py  main.py  map.py  map_manager.py  schemas.py  settings.py
docker/orchestrator/: Dockerfile  entrypoint.sh  pylock.toml  pyproject.toml
docker/orchestrator/src/: main.py  settings.py
docker/reconstructor/: Dockerfile  entrypoint.sh  pylock.neural-networks-cpu.toml  pylock.neural-networks-cuda.toml  pylock.neural-networks-rocm.toml  pylock.neural-networks.toml  pylock.toml  pylock.torch-cpu.toml  pylock.torch-cuda.toml  pylock.torch-rocm.toml  pylock.torch.toml  pyproject.toml
infra/: Pulumi.core.yaml  Pulumi.dev.yaml  Pulumi.yaml  aws_costs.py  costs_data.json  image-lock.json  pyproject.toml  stack.json  state.json
infra/src/: __main__.py  util.py
infra/src/components/: api.py  api_gateway.py  batch_job_definition.py  batch_job_environment.py  cloudbeaver.py  database.py  ecr.py  efs.py  gateway.py  github_runner.py  iam.py  lambda_api.py  lambdas.py  load_balancer.py  log.py  minio.py  nat_instance.py  nat_instnace.py  network.py  oauth.py  oidc.py  rds.py  repository.py  role.py  role_policies.py  roles.py  secret.py  security_group.py  storage.py  tailscale_beacon.py  tailscale_bridge.py  vpc.py
infra/src/services/: api.py  auth_gateway.py  cloudbeaver.py  database_manager.py  github_runner.py  oauth.py  tailscale_beacon.py
infra/src/stacks/: core.py  dev.py
infrastructure/: Pulumi.core.yaml  Pulumi.dev.yaml  Pulumi.yaml  pyproject.toml
infrastructure/src/components/: batch_job_definition.py  batch_job_environment.py  database.py  load_balancer.py  log.py  nat_instance.py  rds.py  repository.py  role.py  roles.py  s3.py  secret.py  security_group.py  vpc.py
infrastructure/src/services/: api.py  auth_gateway.py  cloudbeaver.py  database_manager.py  github_runner.py  tailscale_beacon.py
infrastructure/src/stacks/: core.py  dev.py
scripts/: .openapi-generator-ignore  pylock.hloc.toml  pyproject.toml
scripts/mustache-templates/: modelGeneric.mustache
scripts/openapi-generator/: README.md
scripts/openapi-generator/configs/: csharp.json  python.json
scripts/openapi-generator/template-patches/: 0001-csharp-models-required-only-constructors.patch
scripts/src/: build.py  build_push_lock.py  create_build_plan.py  forward_unity_android_debug_port.py  list_debug_targets.py  run_command.py  sync_python_projects.py  sync_workspace.py  visualize.py
scripts/src/scripts/: build.py  deptry_check.py  downgrade_openapi_schema.py  export_dependency_group_lock_files.py  export_lock_files.py  generate_clients.py  generate_datamodels.py  generate_lock_files.py  list_debug_targets.py  migrate_database.py
scripts/src/sync_workspace/: main.py  sync_client.py  sync_schema.py
scripts/src/test/: curl.py  main.py  visualize.py  vls_test_result.html
services/api/: Dockerfile  Dockerfile.dev  Dockerfile.lambda  entrypoint.sh  openapitools.json  pyproject.toml
services/api/src/: generate_openapi.py  main.py  settings.py  storage.py
services/automigrator/: Dockerfile  entrypoint.sh  pyproject.toml
services/database-manager/: Dockerfile  Dockerfile.compose  entrypoint.sh  pyproject.toml
services/database-manager/src/: database_utils.py  main.py  settings.py
services/reconstruction-worker/: Dockerfile  entrypoint.sh  main.py  pyproject.toml  settings.py
services/visual-localization-system/reconstruction-orchestrator/: Dockerfile  entrypoint.sh  pyproject.toml
services/visual-localization-system/run-reconstruction/: Dockerfile  entrypoint.sh  pylock.hloc.toml  pyproject.toml
services/visual-localization-system/test/: pyproject.toml
tasks/create-database/: Dockerfile  Dockerfile.compose  entrypoint.sh  pyproject.toml
tasks/create-database/src/: main.py  settings.py
tasks/run-reconstruction/: Dockerfile  entrypoint.sh  main.py  pyproject.toml  settings.py
test/: pyproject.toml
test/src/plerion_test/: auth.py  main.py  visualize.py  vls_test_result.html
test/src/test/: auth.py  main.py  (+2 more)
(+1930 files in other folders)
