[project]
name = "plerion_workspace"
version = "0.0.1"
requires-python = "==3.13.*"
dependencies = []

[tool.uv.workspace]
members = [
    "capture-app/zed",
    "docker/database-manager",
    "docker/api",
    "docker/localizer",
    "docker/orchestrator",
    "docker/reconstructor",
    "infrastructure",
    "packages/python/core",
    "packages/python/common",
    "packages/python/torch-meta",
    "packages/python/neural-networks",
    "packages/python/neural-networks/third-party/deep-image-retrieval",
    "packages/generated/python/datamodels",
    "packages/generated/python/api-client",
    "packages/generated/python/localizer-client",
    "scripts",
    "test",
]

[tool.uv]
config-settings-package.plerion-api-client = { editable_mode = "compat" }
config-settings-package.plerion-localizer-client = { editable_mode = "compat" }

[tool.uv.sources]
common = { workspace = true }
core = { workspace = true }
neural-networks = { workspace = true }
datamodels = { workspace = true }
plerion-localizer-client = { workspace = true }
plerion_api_client = { workspace = true }
dirtorch = { workspace = true }
torch-meta = { workspace = true }
lightglue = { git = "https://github.com/cvg/LightGlue.git" }
pybind11-stubgen = { git = "https://github.com/sarlinpe/pybind11-stubgen", rev = "sarlinpe/fix-2024-08" }

[tool.basedpyright]
typeCheckingMode = "strict"
include = [
    "capture-app/**/src/**/*.py",
    "capture-app/**/src/**/*.pyi",
    "docker/**/src/**/*.py",
    "docker/**/src/**/*.pyi",
    "infrastructure/**/src/**/*.py",
    "infrastructure/**/src/**/*.pyi",
    "packages/**/src/**/*.py",
    "packages/**/src/**/*.pyi",
    "scripts/**/src/**/*.py",
    "scripts/**/src/**/*.pyi",
    "test/**/src/**/*.py",
    "test/**/src/**/*.pyi",
]

[tool.ruff]
target-version = "py313"
line-length = 120
preview = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
skip-magic-trailing-comma = true
