[project]
name = "plerion_infra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pulumi>=3.183.0",
    "pulumi-aws>=6.83.0",
    "pulumi-awsx>=2.22.0",
    "pulumi-docker>=4.8.0",
]

[dependency-groups]
dev = ["ruff>=0.12.3"]

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
