[project]
name = "plerion_infra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.10",
    "pulumi>=3.183.0",
    "pulumi-aws>=7.3.1",
    "pulumi-awsx>=2.22.0",
    "pulumi-command>=1.1.0",
    "pulumi-docker>=4.8.0",
    "pulumi-github>=6.7.3",
    "pulumi-postgresql>=3.15.2",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "boto3-stubs[ce]>=1.39.7",
    "botocore-stubs>=1.38.46",
    "ruff>=0.12.3",
    "networkx>=3.5",
    "matplotlib>=3.10.3",
]

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff]
line-length = 120
preview = true

[tool.ruff.format]
skip-magic-trailing-comma = true
