[project]
name = "plerion_infra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.10",
    "pulumi>=3.183.0",
    "pulumi-aws>=7.3.1",
    "pulumi-awsx>=3.0.0",
    "pulumi-command>=1.1.0",
    "pulumi-docker>=4.8.0",
    "pulumi-github>=6.7.3",
    "pulumi-postgresql>=3.15.2",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "botocore-stubs>=1.38.46",
    "boto3-stubs[batch,ecs,secretsmanager,s3,lambda]>=1.40.29",
]

[tool.ruff]
extend = "../ruff.toml"
