[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "common",
  "datamodel-code-generator>=0.33.0",
  "pydantic>=2.11.7",
  "pyhumps>=3.8.0",
  "typer>=0.17.4",
  "sqlalchemy>=2.0.45",
]

[tool.deptry.per_rule_ignores]
DEP002 = ["datamodel-code-generator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scripts"]

[project.scripts]
build = "scripts.build:main"
generate-lock-files = "scripts.generate_lock_files:main"
generate-clients = "scripts.generate_clients:main"
generate-datamodels = "scripts.generate_datamodels:main"
forward-unity-android-debug-port = "scripts.forward_unity_android_debug_port:main"
list-debug-targets = "scripts.list_debug_targets:main"
migrate-database = "scripts.migrate_database:main"
deptry-check = "scripts.deptry_check:main"
