[project]
name = "plerion_test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["core", "httpx>=0.28.1", "plerion_api_client"]

[tool.uv.sources]
core = { workspace = true }
plerion_api_client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plerion_test"]

[project.scripts]
run = "plerion_test.main:main"
