[project]
name = "zed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "common",
    "core",
    "pyzed",
    "fastapi>=0.116.1",
    "scipy>=1.16.1",
    "uvicorn>=0.35.0",
    "openapi-generator-cli>=7.14.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = ["scipy-stubs"]

[[tool.uv.sources.pyzed]]
path = "./third-party/pyzed/pyzed-5.1-cp313-cp313-win_amd64.whl"
marker = "sys_platform == 'win32' and platform_machine == 'AMD64'"

[[tool.uv.sources.pyzed]]
path = "./third-party/pyzed/pyzed-5.1-cp313-cp313-linux_aarch64.whl"
marker = "sys_platform == 'linux' and platform_machine == 'aarch64'"

[[tool.uv.sources.pyzed]]
path = "./third-party/pyzed/pyzed-5.1-cp313-cp313-linux_x86_64.whl"
marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"
