[project]
name = "plerion-localizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "common",
  "core",
  "pycolmap>=3.13.0",
  "h5py>=3.15.0",
  "fastapi>=0.119.0",
  "pydantic-settings>=2.11.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.35.0",
  "opencv-python>=4.10.0",
  "scipy>=1.16.2",
  "faiss-cpu>=1.12.0",
]

[dependency-groups]
dev = ["h5py-stubs>=0.1.2", "scipy-stubs>=1.16.2.4"]
torch = [
  "torch==2.9.0+cu126",
  "torchvision==0.24.0+cu126",
  "scikit-learn>=1.7.2",
]
neural-networks = ["neural-networks"]

[tool.uv.sources]
core = { workspace = true }
common = { workspace = true }
neural-networks = { workspace = true }
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/localize"]

[project.scripts]
localize = "localize.main:main"
