[project]
name = "plerion-localizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "common",
  "core",
  "pycolmap>=3.13.0",
  "h5py>=3.15.0",
  "fastapi>=0.119.0",
  "pydantic-settings>=2.11.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.35.0",
  "opencv-python>=4.10.0",
  "scipy>=1.16.2",
  "faiss-cpu>=1.12.0",
]

[dependency-groups]
dev = ["h5py-stubs>=0.1.2", "scipy-stubs>=1.16.2.4"]
neural-networks-cpu = ["neural-networks[cpu]"]
neural-networks-cuda = ["neural-networks[cuda]"]
neural-networks-rocm = ["neural-networks[rocm]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/localize"]

[project.scripts]
localize = "localize.main:main"
