[project]
name = "orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "common",
    "datamodels",
    "pydantic-settings>=2.11.0",
    "debugpy>=1.8.17",
]

[tool.uv.sources]
common = { workspace = true }
datamodels = { workspace = true }
