[project]
name = "reconstructor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "core",
    "numpy>=2.0",
    "boto3>=1.40.18",
    "scipy>=1.7",
    "opencv-python>=4.10.0",
    "h5py>=3.15.1",
    "faiss-cpu>=1.12.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[batch]>=1.40.18",
    "debugpy>=1.8.16",
    "scipy-stubs>=1.15.3",
    "pybind11-stubgen",
]
torch = [
    "torch==2.9.0+cu126",
    "torchvision==0.24.0+cu126",
    "scikit-learn>=1.7.2",
]
neural-networks = ["neural-networks"]

[tool.uv.sources]
core = { workspace = true }
neural-networks = { workspace = true }
pybind11-stubgen = { git = "https://github.com/sarlinpe/pybind11-stubgen", rev = "sarlinpe/fix-2024-08" }
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/run_reconstruction"]

[project.scripts]
reconstructor = "run_reconstruction.main:main"
