[project]
name = "reconstructor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "core",
    "numpy>=2.0",
    "boto3>=1.40.18",
    "scipy>=1.7",
    "opencv-python>=4.10.0",
    "h5py>=3.15.1",
    "faiss-cpu>=1.12.0",
    "pycolmap>=3.13.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[batch]>=1.40.18",
    "debugpy>=1.8.16",
    "scipy-stubs>=1.15.3",
    "pybind11-stubgen",
]
torch-cpu = ["torch-meta[cpu]"]
torch-cuda = ["torch-meta[cuda]"]
torch-rocm = ["torch-meta[rocm]"]
neural-networks = ["neural-networks"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/run_reconstruction"]

[project.scripts]
reconstructor = "run_reconstruction.main:main"
