[project]
name = "reconstructor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "core",
    "common",
    "plerion-api-client",
    "numpy>=2.0",
    "scipy>=1.7",
    "pycolmap>=3.13.0",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.12.5",
    "cryptography>=46.0.3",
]

[dependency-groups]
dev = [
    "boto3-stubs[batch]>=1.40.18",
    "debugpy>=1.8.16",
    "scipy-stubs>=1.15.3",
    "pybind11-stubgen",
]
neural-networks-cpu = ["neural-networks[cpu]"]
neural-networks-cuda = ["neural-networks[cuda]"]
neural-networks-rocm = ["neural-networks[rocm]"]


[tool.deptry.per_rule_ignores]
# Code in this package directly imports 'torch', but cannot directly depend on torch, because torch has multiple conflicting 
# platform-specific variants that are declared using 'extras' in the 'neural-networks' package, and declaring bare 'torch' 
# directly in this package would lead to dependency conflicts; we therefore must ignore deptry's check for this specific package
DEP003 = ["torch"]
DEP004 = ["neural_networks"]
DEP002 = ["cryptography"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reconstructor"]

[project.scripts]
reconstructor = "reconstructor.main:main"
