[project]
name = "automigrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "common",
    "piccolo[postgres]>=1.28.0",
    "pydantic-settings>=2.10.1",
]

[tool.uv.sources]
common = { path = "../../common", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/automigrator"]

[project.scripts]
automigrator = "automigrator.main:main"

[tool.ruff]
extend = "../../ruff.toml"
