[project]
name = "database-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "common",
    "fastapi>=0.116.1",
    "mangum>=0.19.0",
    "psycopg>=3.2.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pynacl>=1.5.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.16",
    "openapi-generator-cli>=7.14.0",
    "ruff>=0.12.3",
]

[tool.pyright]
typeCheckingMode = "strict"
ignore = ["src/clients"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv.sources]
common = { path = "../../common", editable = true }