[project]
name = "database-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["boto3>=1.40.29", "common", "pydantic-settings>=2.10.1"]

[tool.uv.sources]
common = { path = "../../common", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/database_manager"]

[project.scripts]
database-manager = "database_manager.main:main"

[tool.ruff]
extend = "../../ruff.toml"
