[project]
name = "database-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.29",
    "pydantic-settings>=2.10.1",
    "typer>=0.17.4",
    "psycopg[binary]>=3.2.10",
    "docker>=7.1.0",
]

[dependency-groups]
dev = ["boto3-stubs[batch,ecs,secretsmanager,s3,lambda]>=1.40.29"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/database_manager"]

[project.scripts]
database-manager = "database_manager.main:main"

[tool.ruff]
extend = "../../ruff.toml"
