[project]
name = "create-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "common",
    "pydantic-settings>=2.10.1",
]

[tool.uv.sources]
common = { path = "../../common", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/create_database"]

[project.scripts]
create-database = "create_database.main:main"

[tool.ruff]
extend = "../../ruff.toml"
