[project]
name = "reconstruction_task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["common", "boto3>=1.40.18", "pydantic-settings>=2.10.1"]

[dependency-groups]
dev = ["boto3-stubs[batch]>=1.40.18", "debugpy>=1.8.16"]

[tool.uv.sources]
common = { path = "../../common", editable = true }

[tool.ruff]
extend = "../../ruff.toml"