[project]
name = "run_reconstruction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "common",
    "numpy>=2.0",
    "boto3>=1.40.18",
    "pydantic-settings>=2.10.1",
    "scipy>=1.7",
    "pycolmap>=3.12.6",
    "pybind11-stubgen",
]

[dependency-groups]
dev = ["boto3-stubs[batch]>=1.40.18", "debugpy>=1.8.16", "scipy-stubs>=1.15.3"]
hloc = [
    "hloc",
    "torch==2.6.0+cu126",
    "torchvision==0.21.0+cu126",
    # https://github.com/astral-sh/uv/issues/14237
    # https://discuss.pytorch.org/t/when-i-install-torch-2-6-0-with-whl-cu126-none-of-cuda-dependencies-get-installed-i-have-cu126-in-the-environment-already-is-this-expected/218014/3
    "nvidia-cuda-nvrtc-cu12==12.6.77; platform_system == 'Linux'",
    "nvidia-cuda-runtime-cu12==12.6.77; platform_system == 'Linux'",
    "nvidia-cuda-cupti-cu12==12.6.80; platform_system == 'Linux'",
    "nvidia-cudnn-cu12==9.5.1.17; platform_system == 'Linux'",
    "nvidia-cublas-cu12==12.6.4.1; platform_system == 'Linux'",
    "nvidia-cufft-cu12==11.3.0.4; platform_system == 'Linux'",
    "nvidia-curand-cu12==10.3.7.77; platform_system == 'Linux'",
    "nvidia-cusolver-cu12==11.7.1.2; platform_system == 'Linux'",
    "nvidia-cusparse-cu12==12.5.4.2; platform_system == 'Linux'",
    "nvidia-cusparselt-cu12==0.6.3; platform_system == 'Linux'",
    "nvidia-nvtx-cu12==12.6.77; platform_system == 'Linux'",
    "nvidia-nvjitlink-cu12==12.6.85; platform_system == 'Linux'",
    "nvidia-nccl-cu12==2.21.5; platform_system == 'Linux'",
]


[tool.uv]
override-dependencies = [
    "opencv-python>=4.10.0", # override opencv version hloc would otherwise pull in, to a version built with numpy>=2.0
]

[tool.uv.sources]
common = { path = "../../../common", editable = true }
hloc = { path = "../third-party/Hierarchical-Localization" }
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
pybind11-stubgen = { git = "https://github.com/sarlinpe/pybind11-stubgen", rev = "sarlinpe/fix-2024-08" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/run_reconstruction"]

[project.scripts]
run-reconstruction = "run_reconstruction.main:main"

[tool.ruff]
extend = "../../../ruff.toml"
