[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["core", "httpx>=0.28.1", "plerion"]

[tool.uv.sources]
core = { path = "../core", editable = true }
plerion = { path = "../api/clients/python", editable = true }
